2008-07-01  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* doc/GP2X-Howto.txt, doc/Makefile.am: Added a GP2X compile
	howto text file.

2008-07-02  Andreas Matthies  <andreas.matthies@gmx.net>

	* doc/html/plain/BUGS, NEWS: Updated.

2008-07-01  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.22

2008-06-30  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* doc/html/plain/NEWS: Added mint and sol11 ports and corrected
	a typo.

	* doc/html/solaris.html: Added sol11 port.

2008-06-29  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.21

2008-06-28  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* data/CBM-II/win_shortcuts.vsc, data/VIC20/win_shortcuts.vsc,
	data/PLUS4/win_shortcuts.vsc, data/PET/win_shortcuts.vsc,
	data/C64/win_shortcuts.vsc, data/C128/win_shortcuts.vsc: Set
	default shortcuts Ctrl+C and Ctrl+V for Edit/Copy and Edit/Paste

	* doc/html/plain/NEWS: Updated

2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.20

2008-06-23  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* vice-mint.spec: Added (was forgotten in the previous version)

2008-06-22  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* Makefile.am: Improved some of the make-bindist.sh scripts.

2008-06-19  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* vice-mint.spec, Makefile.am: Added Atari Mint specific rpm

2008-06-19  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* vice-mint.spec, Makefile.am: Added Atari Mint specific rpm
	spec file.

	* AUTHORS, README: Added Fabrizio to the VICE core members.

	* config.guess, config.sub: Added preliminary support for
	avr32-linux.

	* doc/vice.texi: Added Fabrizio to the VICE core members, got
	rid of a duplicate Christian Vogelgsang entry and added/updated
	external contributors entries.

	* doc/html/plain/NEWS, doc/html/index.html: Updated for the
	VICE 2.0 release.

2008-06-22  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.19
